modules/gdscript/tests/scripts/analyzer/errors/return_incompatible_nested_ternary_type.gd
func test() -> int:
	return 1 if randf() < 0.5 else 2 if randf() < 0.5 else "3"
